--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -2,6 +2,6 @@ FROM php:5.6-apache
 MAINTAINER Mario Inga <mario21ic@gmail.com>
 
 RUN ln -s /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
-COPY ./docker/web/php.ini /usr/local/etc/php
+COPY ./php.ini /usr/local/etc/php/
 COPY ./default.conf /etc/apache2/sites-enabled/
 #RUN sed -i 's/AllowOverride None/AllowOverride All/g' -l 11 /etc/apache2/sites-available/default
