Agregando bundle FOUser

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Mario Inga <mario21ic@gmail.com>
 
 RUN apt-get update
 RUN apt-get install -y php5-curl php5-mysql php5-pgsql php5-memcache php5-memcached \
-    php5-mongo php5-redis
+    php5-mongo php5-redis mysql-client
 
 RUN ln -s /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
 COPY ./php.ini /usr/local/etc/php/
