--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ web:
   - "80:80"
 mysqldb:
   image: mysql:latest
+  ports:
+  - "3306:3306"
   environment:
     MYSQL_DATABASE: symfony_db
     MYSQL_USER: root
